force-app/main/default/objects/Sucursal__c/Sucursal__c.object-meta.xml
<CustomObject>
    <label>Sucursal</label>
    <nameField>
        <label>Nombre de Sucursal</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sucursales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>