force-app/main/default/objects/Sucursal__c/fields/Empresa__c.field-meta.xml
<CustomField>
    <fullName>Empresa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sucursales</relationshipLabel>
    <relationshipName>Sucursales</relationshipName>
    <type>Lookup</type>
</CustomField>