force-app/main/default/objects/Sucursal__c/fields/Es_sujeto_de_facturacion__c.field-meta.xml
<CustomField>
    <fullName>Es_sujeto_de_facturacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es sujeto de facturacion</label>
    <type>Checkbox</type>
</CustomField>