force-app/main/default/objects/Sucursal__c/fields/Fecha_de_Activacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Activacion__c</fullName>
    <label>Fecha de Activación</label>
    <type>Date</type>
</CustomField>