force-app/main/default/objects/Sucursal__c/fields/Observaciones__c.field-meta.xml
<CustomField>
    <fullName>Observaciones__c</fullName>
    <label>Observaciones</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>