force-app/main/default/objects/Sucursal__c/fields/Referencia_externa__c.field-meta.xml
<CustomField>
    <fullName>Referencia_externa__c</fullName>
    <label>Referencia externa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>